--- a/WeatherMate/WeatherMate/Base.lproj/Main.storyboard
+++ b/WeatherMate/WeatherMate/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tJ9-yZ-HFZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tJ9-yZ-HFZ">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -85,17 +85,17 @@
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="tnH-p0-ab1">
-                                                <rect key="frame" x="83" y="0.0" width="248" height="235"/>
+                                                <rect key="frame" x="160" y="0.0" width="94.5" height="75"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MC0-1k-nel">
-                                                        <rect key="frame" x="46" y="0.0" width="156" height="160"/>
+                                                        <rect key="frame" x="47" y="0.0" width="0.0" height="0.0"/>
                                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <fontDescription key="fontDescription" name="Noteworthy-Bold" family="Noteworthy" pointSize="100"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="5aL-ud-5Bb">
-                                                        <rect key="frame" x="0.0" y="160" width="248" height="75"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="94.5" height="75"/>
                                                         <subviews>
                                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="A7L-8K-c95">
                                                                 <rect key="frame" x="0.0" y="0.0" width="75" height="75"/>
@@ -105,7 +105,7 @@
                                                                 </constraints>
                                                             </imageView>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" lineBreakMode="wordWrap" baselineAdjustment="none" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="dJL-mq-jHX">
-                                                                <rect key="frame" x="85" y="24" width="163" height="27.5"/>
+                                                                <rect key="frame" x="85" y="24" width="9.5" height="27.5"/>
                                                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="25"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -117,7 +117,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="28" translatesAutoresizingMaskIntoConstraints="NO" id="nbb-Vu-MKC">
-                                                <rect key="frame" x="119.5" y="699" width="175" height="105.5"/>
+                                                <rect key="frame" x="119.5" y="302.5" width="175" height="139"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="fQ0-Ob-hRI">
                                                         <rect key="frame" x="0.0" y="0.0" width="175" height="16.5"/>
@@ -129,7 +129,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="right" lineBreakMode="wordWrap" baselineAdjustment="none" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="pZH-aB-BON">
-                                                                <rect key="frame" x="77" y="0.0" width="98" height="16.5"/>
+                                                                <rect key="frame" x="169" y="0.0" width="6" height="16.5"/>
                                                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="15"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -137,16 +137,16 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="PTX-d4-YkD">
-                                                        <rect key="frame" x="0.0" y="44.5" width="175" height="16.5"/>
+                                                        <rect key="frame" x="0.0" y="44.5" width="175" height="50"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pressure" lineBreakMode="wordWrap" baselineAdjustment="none" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="RPO-iM-r2C">
-                                                                <rect key="frame" x="0.0" y="0.0" width="51.5" height="16.5"/>
+                                                                <rect key="frame" x="0.0" y="0.0" width="51.5" height="50"/>
                                                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="15"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="wordWrap" baselineAdjustment="none" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="WTe-7q-IrT">
-                                                                <rect key="frame" x="77" y="0.0" width="98" height="16.5"/>
+                                                                <rect key="frame" x="77" y="0.0" width="98" height="50"/>
                                                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="15"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -154,7 +154,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="fFP-TD-XS1">
-                                                        <rect key="frame" x="0.0" y="89" width="175" height="16.5"/>
+                                                        <rect key="frame" x="0.0" y="122.5" width="175" height="16.5"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WindSpeed" lineBreakMode="wordWrap" baselineAdjustment="none" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="K9j-L1-p5Q">
                                                                 <rect key="frame" x="0.0" y="0.0" width="68" height="16.5"/>
@@ -163,7 +163,7 @@
                                                                 <nil key="highlightedColor"/>
                                                             </label>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" textAlignment="right" lineBreakMode="wordWrap" baselineAdjustment="none" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="uBg-3H-o4H">
-                                                                <rect key="frame" x="77" y="0.0" width="98" height="16.5"/>
+                                                                <rect key="frame" x="169" y="0.0" width="6" height="16.5"/>
                                                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="15"/>
                                                                 <nil key="textColor"/>
                                                                 <nil key="highlightedColor"/>
@@ -174,22 +174,22 @@
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="4R3-p7-n8I">
-                                                <rect key="frame" x="71" y="417.5" width="272.5" height="27.5"/>
+                                                <rect key="frame" x="194" y="175" width="26.5" height="27.5"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" lineBreakMode="wordWrap" baselineAdjustment="none" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="E5B-rO-MwJ">
-                                                        <rect key="frame" x="0.0" y="2.5" width="130.5" height="22"/>
+                                                        <rect key="frame" x="0.0" y="3" width="7.5" height="22"/>
                                                         <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="|" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="none" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="05g-Ze-Tuk">
-                                                        <rect key="frame" x="133.5" y="0.0" width="5.5" height="27.5"/>
+                                                        <rect key="frame" x="10.5" y="0.0" width="5.5" height="27.5"/>
                                                         <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="25"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-" lineBreakMode="wordWrap" baselineAdjustment="none" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="R87-NR-5sb">
-                                                        <rect key="frame" x="142" y="2.5" width="130.5" height="22"/>
+                                                        <rect key="frame" x="19" y="3" width="7.5" height="22"/>
                                                         <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="20"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -200,14 +200,15 @@
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstItem="nbb-Vu-MKC" firstAttribute="top" secondItem="4R3-p7-n8I" secondAttribute="bottom" constant="100" id="5YZ-wa-M05"/>
                                             <constraint firstItem="4R3-p7-n8I" firstAttribute="centerX" secondItem="sZT-1H-27D" secondAttribute="centerX" id="A6s-On-BS3"/>
-                                            <constraint firstAttribute="bottom" secondItem="nbb-Vu-MKC" secondAttribute="bottom" constant="57.5" id="B1v-Ix-XBO"/>
+                                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="nbb-Vu-MKC" secondAttribute="bottom" constant="57.5" id="B1v-Ix-XBO"/>
                                             <constraint firstAttribute="trailing" secondItem="nbb-Vu-MKC" secondAttribute="trailing" constant="119.5" id="Bkk-xf-91P"/>
-                                            <constraint firstItem="4R3-p7-n8I" firstAttribute="centerY" secondItem="sZT-1H-27D" secondAttribute="centerY" id="V3K-HN-8Zo"/>
                                             <constraint firstItem="nbb-Vu-MKC" firstAttribute="centerX" secondItem="sZT-1H-27D" secondAttribute="centerX" id="VVC-1y-hif"/>
                                             <constraint firstItem="nbb-Vu-MKC" firstAttribute="leading" secondItem="sZT-1H-27D" secondAttribute="leading" constant="119.5" id="WjC-Ru-luO"/>
                                             <constraint firstItem="tnH-p0-ab1" firstAttribute="top" secondItem="sZT-1H-27D" secondAttribute="top" id="g5P-WB-G6q"/>
                                             <constraint firstItem="tnH-p0-ab1" firstAttribute="centerX" secondItem="sZT-1H-27D" secondAttribute="centerX" id="m3d-7B-MEr"/>
+                                            <constraint firstItem="4R3-p7-n8I" firstAttribute="top" secondItem="tnH-p0-ab1" secondAttribute="bottom" constant="100" id="zAl-fN-T6I"/>
                                         </constraints>
                                     </view>
                                 </subviews>
